Fix the bibfile, should be the final form now

--- a/thesis-mnie.bib
+++ b/thesis-mnie.bib
@@ -1,16 +1,19 @@
 
 @misc{statcounter_global_????,
-	title = {Global Stats},
+	title = {Internet Usage global stats},
 	url = {http://gs.statcounter.com/#all-comparison-ww-monthly-201311-201411},
 	urldate = {2014-12-04},
-	author = {StatCounter}
+	author = {StatCounter},
+	howpublished = {Available at: http://gs.statcounter.com/#all-comparison-ww-monthly-201311-201411/ Referenced 04.12.2014.}
 }
 
-@inproceedings{jazayeri_trends_????,
+@misc{jazayeri_trends_????,
 	title = {Some Trends in Web Application Development},
 	url = {http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=4221621&url=http%3A%2F%2Fieeexplore.ieee.org%2Fxpls%2Fabs_all.jsp%3Farnumber%3D4221621},
 	abstract = {http://ieeexplore.ieee.org/xpl/login.jsp?tp=\&arnumber=4221621\&url=http\%3A\%2F\%2Fieeexplore.ieee.org\%2Fxpls\%2Fabs\_all.jsp\%3Farnumber\%3D4221621},
-	author = {Jazayeri, M}
+	author = {Jazayeri, M},
+	howpublished = {Available at: \url{http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=4221621&url=http%3A%2F%2Fieeexplore.ieee.org%2Fxpls%2Fabs_all.jsp%3Farnumber%3D4221621} Referenced 2.11.2014.}
+
 }
 
 @inproceedings{carstensen_computer_1999,
@@ -32,7 +35,8 @@
 	author = {Archibald, Jake},
 	month = may,
 	year = {2012},
-	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/A2UZE52U/Application Cache is a Douchebag.html:text/html}
+	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/A2UZE52U/Application Cache is a Douchebag.html:text/html},
+	howpublished = {Available at: \url{http://alistapart.com/article/application-cache-is-a-douchebag/}}
 }
 
 @article{strover_rural_2001,
@@ -112,7 +116,8 @@ Research associates Kyle Nicholas and Lisa Parker were instrumental in undertaki
 @misc{fielding_et_al_hypertext_????,
 	title = {Hypertext Transfer Protocol 1.1 -- Header Field Definitions},
 	url = {http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.9},
-	author = {Fielding, et al}
+	author = {Fielding, et al},
+	howpublished = {Available at: \url{http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.9} Referenced 4.11.2014.}
 }
 
 @article{leblon_building_????,
@@ -129,18 +134,22 @@ Research associates Kyle Nicholas and Lisa Parker were instrumental in undertaki
 }
 
 @misc{_window.navigator.online_????,
-	title = {window.navigator.{onLine}},
+	title = {Document Object Model: window.navigator.{onLine}},
+	author = {Mozilla Corporation},
 	url = {https://developer.mozilla.org/fi/docs/DOM/window.navigator.onLine},
 	abstract = {Palauttaa selaimen verkkotilan. Ominaisuus palauttaa boolean-arvon, joka on true , kun verkkoyhteys on päällä ja false , kun selain toimii erillissovelluksena. Ominaisuus lähettää päivityksiä aina kun selaimen kyky yhdistyä verkkoon muuttuu. Päivitys tapahtuu, kun käyttäjä seuraa linkkiä tai kun skripti pyytää etäsivua. Esimerkiksi ominaisuuden pitäisi palauttaa false , kun käyttäjä napsauttaa linkkiä pian internet-yhteyden katkeamisen jälkeen.},
 	urldate = {2014-11-25},
 	journal = {Mozilla Developer Network},
-	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/GP447AZK/window.navigator.onLine.html:text/html}
+	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/GP447AZK/window.navigator.onLine.html:text/html},
+	howpublished = {Available at: \url{https://developer.mozilla.org/fi/docs/DOM/window.navigator.onLine/} Referenced 25.11.2014.}
 }
 
 @misc{_html_????,
 	title = {{HTML} Specification: Offline Web Applications},
 	url = {https://html.spec.whatwg.org/multipage/browsers.html#offline},
-	urldate = {2014-10-27}
+	urldate = {2014-10-27},
+	author = {Web Hypertext Application Technology Working Group},
+	howpublished = {Available at: \url{https://html.spec.whatwg.org/multipage/browsers.html#offline} Referenced 27.10.2014.}
 }
 
 @inproceedings{wang_how_2012,
@@ -161,22 +170,16 @@ Research associates Kyle Nicholas and Lisa Parker were instrumental in undertaki
 	file = {ACM Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/HDB8V68P/Wang et al. - 2012 - How Far Can Client-only Solutions Go for Mobile Br.pdf:application/pdf}
 }
 
-@misc{center_for_history_and_new_media_zotero_????,
-	title = {Zotero Quick Start Guide},
-	url = {http://zotero.org/support/quick_start_guide},
-	author = {{Center for History and New Media}},
-	annote = {Welcome to Zotero!
-View the Quick Start Guide to learn how to begin collecting, managing, citing, and sharing your research sources.
-Thanks for installing Zotero.}
-}
 
 @misc{_using_????,
 	title = {Using the application cache},
-	url = {https://developer.mozilla.org/en-US/docs/Web/HTML/Using_the_application_cache},
+	url = {http://developer.mozilla.org/en-US/docs/Web/HTML/Using_the_application_cache},
+	author = {Mozilla Corporation},
 	abstract = {{HTML}5 provides an application caching mechanism that lets web-based applications run offline. Developers can use the Application Cache ({AppCache}) interface to specify resources that the browser should cache and make available to offline users. Applications that are cached load and work correctly even if users click the refresh button when they are offline.},
 	urldate = {2014-11-24},
 	journal = {Mozilla Developer Network},
-	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/ZT4RXRWB/Using the application cache.html:text/html}
+	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/ZT4RXRWB/Using the application cache.html:text/html},
+	howpublished = {Available at: \url{http://developer.mozilla.org/en-US/docs/Web/HTML/Using_the_application_cache/} Referenced 24.11.2014.}
 }
 
 @incollection{casario_html5_2011,
@@ -392,7 +395,7 @@ This dissertation defines a framework for understanding software architecture vi
 
 {REST} emphasizes scalability of component interactions, generality of interfaces, independent deployment of components, and intermediary components to reduce interaction latency, enforce security, and encapsulate legacy systems. I describe the software engineering principles guiding {REST} and the interaction constraints chosen to retain those principles, contrasting them to the constraints of other architectural styles. Finally, I describe the lessons learned from applying {REST} to the design of the Hypertext Transfer Protocol and Uniform Resource Identifier standards, and from their subsequent deployment in Web client and server software.},
 	urldate = {2014-10-28},
-	school = {{UNIVERSITY} {OF} {CALIFORNIA}, {IRVINE}},
+	school = {{University} {of} {California}, {Irvine}},
 	author = {Fielding, Roy},
 	year = {2000}
 }
@@ -425,7 +428,8 @@ This dissertation defines a framework for understanding software architecture vi
 	title = {Web Storage - the {localStorage} attribute},
 	url = {http://www.w3.org/TR/webstorage/#the-localstorage-attribute},
 	urldate = {2014-12-11},
-	author = {W3.org}
+	author = {W3.org},
+	howpublished = {Available at: \url{http://www.w3.org/TR/webstorage/#the-localstorage-attribute/} Referenced 11.12.2014.}
 }
 
 @article{costello_building_2007,
@@ -433,7 +437,7 @@ This dissertation defines a framework for understanding software architecture vi
 	volume = {11},
 	url = {http://staff.frederick.ac.cy/com.bd/Web%20Engineering%20I/Readings/Building%20Web%20Services%20the%20REST%20Way.pdf},
 	urldate = {2014-12-01},
-	journal = {{UR} L: http://www. xfront. com/{REST}-Web-Services. html. Ultima Consulta},
+	journal = {URL: http://www.xfront.com/{REST}-Web-Services. HTML. Ultima Consulta},
 	author = {Costello, Roger L.},
 	year = {2007},
 	pages = {2007},
@@ -462,7 +466,7 @@ This dissertation defines a framework for understanding software architecture vi
 
 @book{yin_case_2013,
 	address = {Los Angeles},
-	edition = {Fifth Edition edition},
+	edition = {Fifth},
 	title = {Case Study Research: Design and Methods},
 	isbn = {9781452242569},
 	shorttitle = {Case Study Research},
@@ -507,7 +511,8 @@ This dissertation defines a framework for understanding software architecture vi
 	urldate = {2014-11-08},
 	author = {Garrett, Jesse James},
 	month = feb,
-	year = {2005}
+	year = {2005},
+	howpublished = {Available at: \url{https://courses.cs.washington.edu/courses/cse490h/07sp/readings/ajax_adaptive_path.pdf}}
 }
 
 @article{deacon_model-view-controller_2009,
@@ -618,17 +623,21 @@ This dissertation defines a framework for understanding software architecture vi
 }
 
 @misc{_.ajaxerror_????,
-	title = {.{ajaxError}() {\textbar} {jQuery} {API} Documentation},
+	title = {.{ajaxError}(), {jQuery} {API} Documentation},
 	url = {http://api.jquery.com/ajaxerror/},
+	author = {jQuery Foundation},
 	abstract = {{jQuery}: The Write Less, Do More, {JavaScript} Library},
 	urldate = {2014-11-25},
-	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/BBXNDPEQ/.ajaxError()  jQuery API Documentation.html:text/html}
+	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/BBXNDPEQ/.ajaxError()  jQuery API Documentation.html:text/html},
+	howpublished = {Available at: \url{http://api.jquery.com/ajaxerror/} Referenced 4.11.2014.}
 }
 
 @misc{_deferred.promise_????,
-	title = {deferred.promise() {\textbar} {jQuery} {API} Documentation},
+	title = {deferred.promise(),{jQuery} {API} Documentation},
 	url = {http://api.jquery.com/deferred.promise/},
+	author = {jQuery Foundation},
 	abstract = {{jQuery}: The Write Less, Do More, {JavaScript} Library},
 	urldate = {2014-11-25},
-	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/DWU73K9W/deferred.promise()  jQuery API Documentation.html:text/html}
+	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/DWU73K9W/deferred.promise()  jQuery API Documentation.html:text/html},
+	howpublished = {Available at: \url{http://api.jquery.com/deferred.promise/} Referenced 20.11.2014.}
 }
