Add possible way to remove page numbers on the appendix

--- a/material/interview_template.tex
+++ b/material/interview_template.tex
@@ -1,4 +1,8 @@
 
+% \maketitle
+% \thispagestyle{empty}
+% \pagestyle{empty}
+
 \chapter{Appendix: Interview Template}
 
 \textbf{Haastattelu Päikky-järjestelmän offline-tuesta}
