Typo fixes in bibfile

--- a/thesis-mnie.bib
+++ b/thesis-mnie.bib
@@ -20,7 +20,7 @@
 	title = {Computer Supported Cooperative Work: New Challenges to Systems Design},
 	shorttitle = {Computer Supported Cooperative Work},
 	abstract = {This paper aims at introducing some of the essential problems addressed within {CSCW}, and to illustrate some of the approaches taken for better understanding the central aspects of cooperative work activities and to design computer-based systems supporting collaborative work activities. Our discussion and examples are to a large extent taken from design oriented work domains. Most of the claims will, however, be generally valid.},
-	booktitle = {In K. Itoh (Ed.), Handbook of Human Factors},
+	booktitle = {K. Itoh (Ed.), Handbook of Human Factors},
 	author = {Carstensen, Peter H. and Schmidt, Kjeld},
 	year = {1999},
 	pages = {619--636},
@@ -86,7 +86,7 @@ Research associates Kyle Nicholas and Lisa Parker were instrumental in undertaki
 }
 
 @article{paulson_building_2005,
-	title = {Building rich web applications with Ajax},
+	title = {Building rich web applications with AJAX},
 	volume = {38},
 	issn = {0018-9162},
 	doi = {10.1109/MC.2005.330},
