Fix code snippet styles

--- a/thesis-mnie.tex
+++ b/thesis-mnie.tex
@@ -16,6 +16,9 @@
 % koodilistauksia varten tarvittavat hässäkät
 \usepackage{listings}
 \captionsetup[lstlisting]{ format=listing, labelfont=white, textfont=white, singlelinecheck=false, margin=0pt, font={bf,footnotesize} }
+\lstset{basicstyle=\footnotesize\ttfamily,breaklines=true}
+\lstset{framextopmargin=50pt,frame=bottomline}
+
 
 \usepackage{nowidow}
 
