Add stuff for hyphenation

--- a/thesis-mnie.tex
+++ b/thesis-mnie.tex
@@ -10,6 +10,10 @@
 
 \usepackage[utf8]{inputenc}
 
+% spelling
+\usepackage[T1]{fontenc}
+\usepackage[finnish,english]{babel}
+
 % kuvatekstien kirjasinkoko ja asettelu
 \usepackage[small]{caption}
 
@@ -29,8 +33,6 @@
 \usepackage{pdfpages} % PDF include
 
 
-
-% omia käskyjä voi lisätä tähän väliin, esim. \newcommand{\angs}{\textsl{\AA}}
 
 \pagenumbering{Roman}
 
