--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -4,7 +4,6 @@
  
 % If thesis is in English, use the file "tut-logo"
 % instead of "tty-logo" in the following:
- 
 \includegraphics[width=8cm]{assets/tut-logo}
  
 \vspace{6.8cm}
@@ -23,7 +22,7 @@
 \textsf{Examiners and topic approved in}\\ 
 \textsf{the Information Technology}\\
 \textsf{Department Council meeting on}\\
-\textsf{xx.xx.xxxx}\\
+\textsf{xx.02.2015}\\
 \end{spacing}
 \end{minipage}
 \end{flushright}
@@ -40,18 +39,23 @@
 \textsf{TAMPEREEN TEKNILLINEN YLIOPISTO}\\
 \textsf{Tietotekniikan koulutusohjelma}\\
 {\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Single-Page Web Applications}}\\
-\textsf{Diplomityö, xx sivua}\\
-\textsf{Xxxxxkuu 2015}\\
+\textsf{Diplomityö, 53 sivua}\\
+\textsf{Maaliskuu 2015}\\
 \textsf{Pääaine: Ohjelmistotuotanto}\\
 \textsf{Tarkastajat: Tommi Mikkonen}\\
-\textsf{Avainsanat: JavaScript, Single-Page Application, Computer Supported Collaborative Work, Offline Support}\\
+\textsf{Avainsanat: JavaScript, Web Application, Single-Page Application, Computer Supported Collaborative Work, Offline Support}\\
 \end{spacing}
  
-\noindent
-Tekstiä
- 
-\noindent
-Tekstiä
+Web-teknologioiden nopea kehittyminen niin työpöytä- kuin mobiililaitteissa on tehnyt selaimesta varteenotettavan sovellusalustan lähes kaikenlaisille ohjelmistoille. Suorituskykyisen selaimen löytyminen yhä useammasta taskusta tekee web-tek\-no\-lo\-gi\-oi\-den käyttämisestä yhä houkuttelevampaa ja kustannustehokkaampaa myös toteutettaessa liiketoimintakriittisiä sovelluksia.
+
+Mobiililaitteiden määrän kasvuvauhti on ohittanut matkapuhelinverkkojen datayhteyksien kantokyvyn kasvuvauhdin. Laitteita myös käytetään yhä syrjäisemmissä sijainneissa, missä datayhteydet ovat rajoittuneita tai jopa olemattomia. Tämä aiheuttaa ongelmia käytettäessä web-sovelluksia, joiden toiminta on riippuvainen yhteydestä palvelimeen. Huono datayhteys tuottaa ongelmia web-sovelluksen käyttäjälle, kun sovellus saattaa olla hetkittäin täysin toimimattomassa tilassa.
+
+Tässä työssä keskitytään siihen, miten web-kehittäjät voivat varautua yhteyden katkoksiin ja heikkoon laatuun sovellustasolla. Työn pohjana käytetään tapaustutkimusta, missä päiväkotiympäristössä käytettävään Päikky-sovellukseen lisätään offline-tuki. Tapaustutkimuksessa toteutettuja ratkaisuja arvioidaan käyttäjähaastattelujen avulla sen kannalta, miten ne sopivat yleispäteviksi ratkaisumalleiksi web-sovelluksissa yhteyskatkosten varalle. Tehtyjä ratkaisuja arvioidaan myös käyttökokemusnäkökulmasta, ja siitä, miten ne tukevat ja ovat ymmärrettävissä keskivertokäyttäjälle.
+
+Työn tulosten pohjalta esitetään suunnitteluperiaatteita sovelluskehittäjille yh\-te\-ys\-kat\-kok\-siin varautumista varten. Käyttäjähaastatteluissa ilmentyneet ratkaisun käyttökokemuksen epäkohdat listataan, ja niihin ehdotetaan mahdollisia parannusehdotuksia ja jatkotoimenpiteitä.
+
+Työn keskeisimmät tulokset osoittavat, että yhteysongelmiin tulee ainakin jollakin tasolla varautua nykypäivänä kaikissa vakavastiotettavissa web-sovelluksissa. Vaikka varsinaista offline-tukea ei toteutettaisikaan, voidaan työssä esitetyillä suunnitteluperiaatteilla parantaa huomattavasti web-sovelluksen käyttökokemusta.
+
 
 
 
@@ -64,11 +68,11 @@ Tekstiä
 \textsf{TAMPERE UNIVERSITY OF TECHNOLOGY}\\
 \textsf{Master's Degree Programme in Information Technology}\\
 {\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Single-Page Web Applications}}\\
-\textsf{Master of Science Thesis, xx pages}\\
-\textsf{xxxxxx 2015}\\
+\textsf{Master of Science Thesis, 53 pages}\\
+\textsf{March 2015}\\
 \textsf{Major: Software Engineering}\\
 \textsf{Examiner: Tommi Mikkonen}\\
-\textsf{Keywords: JavaScript, Single-Page Application, Computer Supported Collaborative Work, Offline Support}\\
+\textsf{Keywords: JavaScript, Web Application, Single-Page Application, Computer Supported Collaborative Work, Offline Support}\\
 \end{spacing}
  
  % Konteksti
@@ -95,7 +99,9 @@ Here will be dragons
 \chapter*{PREFACE}
 \noindent 
 
-Your advertisement could be here.
+Academic writing surely is not for everyone.
+
+Your advertisement could have been here.
 
 
 
