--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -48,13 +48,13 @@
  
 Web-teknologioiden nopea kehittyminen niin työpöytä- kuin mobiililaitteissa on tehnyt selaimesta varteenotettavan sovellusalustan lähes kaikenlaisille ohjelmistoille. Suorituskykyisen selaimen löytyminen yhä useammasta taskusta tekee web-tek\-no\-lo\-gi\-oi\-den käyttämisestä yhä houkuttelevampaa ja kustannustehokkaampaa myös toteutettaessa liiketoimintakriittisiä sovelluksia.
 
-Mobiililaitteiden määrän kasvuvauhti on ohittanut matkapuhelinverkkojen datayhteyksien kantokyvyn kasvuvauhdin. Laitteita myös käytetään yhä syrjäisemmissä sijainneissa, missä datayhteydet ovat rajoittuneita tai jopa olemattomia. Tämä aiheuttaa ongelmia käytettäessä web-sovelluksia, joiden toiminta on riippuvainen yhteydestä palvelimeen. Huono datayhteys tuottaa ongelmia web-sovelluksen käyttäjälle, kun sovellus saattaa olla hetkittäin täysin toimimattomassa tilassa.
+Mobiililaitteiden määrän kasvuvauhti on ohittanut matkapuhelinverkkojen datayhteyksien kantokyvyn kasvuvauhdin. Laitteita myös käytetään yhä syrjäisemmissä sijainneissa, missä datayhteydet ovat rajallisia tai jopa olemattomia. Tämä aiheuttaa ongelmia käytettäessä web-sovelluksia, joiden toiminta on riippuvainen yhteydestä palvelimeen. Huono datayhteys tuottaa ongelmia web-sovelluksen käyttäjälle, kun sovellus saattaa olla hetkittäin täysin toimimattomassa tilassa.
 
 Tässä työssä keskitytään siihen, miten web-kehittäjät voivat varautua yhteyden katkoksiin ja heikkoon laatuun sovellustasolla. Työn pohjana käytetään tapaustutkimusta, missä päiväkotiympäristössä käytettävään Päikky-sovellukseen lisätään offline-tuki. Tapaustutkimuksessa toteutettuja ratkaisuja arvioidaan käyttäjähaastattelujen avulla sen kannalta, miten ne sopivat yleispäteviksi ratkaisumalleiksi web-sovelluksissa yhteyskatkosten varalle. Tehtyjä ratkaisuja arvioidaan myös käyttökokemusnäkökulmasta, ja siitä, miten ne tukevat ja ovat ymmärrettävissä keskivertokäyttäjälle.
 
-Työn tulosten pohjalta esitetään suunnitteluperiaatteita sovelluskehittäjille yh\-te\-ys\-kat\-kok\-siin varautumista varten. Käyttäjähaastatteluissa ilmentyneet ratkaisun käyttökokemuksen epäkohdat listataan, ja niihin ehdotetaan mahdollisia parannusehdotuksia ja jatkotoimenpiteitä.
+Työn tulosten pohjalta esitetään suunnitteluperiaatteita sovelluskehittäjille yh\-te\-ys\-kat\-kok\-siin varautumista varten. Käyttäjähaastatteluissa ilmenneet epäkohdat ratkaisun käyttökokemuksesa listataan, ja niihin ehdotetaan mahdollisia parannusehdotuksia.
 
-Työn keskeisimmät tulokset osoittavat, että yhteysongelmiin tulee ainakin jollakin tasolla varautua nykypäivänä kaikissa vakavastiotettavissa web-sovelluksissa. Vaikka varsinaista offline-tukea ei toteutettaisikaan, voidaan työssä esitetyillä suunnitteluperiaatteilla parantaa huomattavasti web-sovelluksen käyttökokemusta.
+Työn keskeisimmät tulokset osoittavat, että yhteysongelmiin tulee ainakin jollakin tasolla varautua nykypäivänä kaikissa liiketoimintakriittisissä web-sovelluksissa. Vaikka varsinaista offline-tukea ei toteutettaisikaan, voidaan työssä esitetyillä suunnitteluperiaatteilla parantaa huomattavasti web-sovelluksen käyttökokemusta.
 
 
 
@@ -75,18 +75,16 @@ Työn keskeisimmät tulokset osoittavat, että yhteysongelmiin tulee ainakin jol
 \textsf{Keywords: JavaScript, Web Application, Single-Page Application, Computer Supported Collaborative Work, Offline Support}\\
 \end{spacing}
  
- % Konteksti
-\noindent
-Here will be dragons
- 
- % Ongelma
-\noindent
+Fast-paced evolution of web technologies in both desktop and mobile devices has made browser environment reckoned platform for almost any kind of application. The fact that more and more people are carrying efficient browsers in their pockets makes usage of web technologies more tempting and cost efficient solution even when creating business critical applications.
 
- % Tässä diplomityössä (mitä tehty ratkaisemiseksi)
-\noindent
+The growth rate of mobile device usage has surpassed the rate in which new mobile network is built. The devices are also used in more distant locations, where the data connection of the mobile network can be very limited or almost non-existent. This causes problems when using web applications, which are dependent on the connection to the server. Bad connectivity results in a degenerate user experience, since the application might be completely unusable when the connection is dropped.
 
-% Arvio onnistumisesta
-\noindent
+In this thesis we focus on how web developers could prepare the application for connection loss on the application level. The research is based on a case study, in which Päikky, an application from the kindergarten domain, is implemented with an offline support. The solutions done on the case study's offline support implementation are evaluated with user interviews from technical viewpoint and from user experience perspective. On the evaluation the emphasis is on could the solutions be generalized as design guidelines for offline support, and are the solutions understandable and usable for an average user.
+
+Based on the results of the research a set of design guidelines for offline support implementation are defined. The user experience flaws found on the user interviews are listed, and possible solutions for them are discussed.
+
+The essential results of this thesis indicates that connection issues are something that application should be prepared for, at least if the application is business critical. Even if there is no need for a full offline support, following the guidelines introduced will improve any web application's user experience significantly.
+
 
 
 
@@ -101,8 +99,12 @@ Here will be dragons
 
 Academic writing surely is not for everyone.
 
-Your advertisement could have been here.
+home team J & D
 
+D. Sc. Sami Vihavainen lähteiden täsmätoimitus
+
+
+Your advertisement could have been here.
 
 
 
