--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -97,14 +97,33 @@ The essential results of this thesis indicates that connection issues are someth
 \chapter*{PREFACE}
 \noindent 
 
-Academic writing surely is not for everyone.
 
-home team J & D
+Academic writing surely is not for everyone, I will tell you that. The booklet you are holding (or watching via screen) is the result of the mentally hardest project I have ever pulled through. Even if I never actually doubt myself about finishing this thesis, there were some dark moments during the creation of this ensemble. 
 
-D. Sc. Sami Vihavainen lähteiden täsmätoimitus
+This space is usually used for thanking relevant people. And by coincidence also I have several people to thank for making this thesis happen.
+
+I would like to thank my examiner Professor Tommi Mikkonen, who has the amazing ability to make the writing of a thesis to sound always so easy and straightforward task. The various hands-on advices which made the writing easier were also highly appreciated.
+
+The completion of this thesis is a fact thanks to also my instructor D.Sc. Sami Vihavainen, to whom I surely was not the most optimal thesis worker to mentor. Even after three weeks of full-time thesis work which resulted only under 5 pages of text Sami could find the positive sides of the work done and encourage me to go further.
+
+Massive thanks goes also to my employee Futurice, which supplied the extraordinarily awesome circumstances for the creation of this thesis. Especially I HAVE to thank the allmighty tribe Tammerforce, since without the peer pressure provided by them this thesis would still be in the making. 
+
+Lastly I would like to send love to my home team J and D, who cheered me through this project and withstanded my constant tantrums during it.
+
+And now, as they say in Finland: \textit{``torille!''}
+
+%Your advertisement could have been here.
+
+\bigskip
+
+\noindent 
+Tampere, December 17, 2014
+\noindent 
+Miro Nieminen
 
 
-Your advertisement could have been here.
+
+
 
 
 
