Typofixes and adjustments based by Tammerforce feedback

--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -22,7 +22,7 @@
 \textsf{Examiners and topic approved in}\\ 
 \textsf{the Information Technology}\\
 \textsf{Department Council meeting on}\\
-\textsf{xx.02.2015}\\
+\textsf{08.04.2015}\\
 \end{spacing}
 \end{minipage}
 \end{flushright}
@@ -40,7 +40,7 @@
 \textsf{Tietotekniikan koulutusohjelma}\\
 {\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Single-Page Web Applications}}\\
 \textsf{Diplomityö, 53 sivua}\\
-\textsf{Maaliskuu 2015}\\
+\textsf{Toukokuu 2015}\\
 \textsf{Pääaine: Ohjelmistotuotanto}\\
 \textsf{Tarkastajat: Tommi Mikkonen}\\
 \textsf{Avainsanat: JavaScript, Web Application, Single-Page Application, Computer Supported Collaborative Work, Offline Support}\\
@@ -48,11 +48,11 @@
  
 Web-teknologioiden nopea kehittyminen niin työpöytä- kuin mobiililaitteissa on tehnyt selaimesta varteenotettavan sovellusalustan lähes kaikenlaisille ohjelmistoille. Suorituskykyisen selaimen löytyminen yhä useammasta taskusta tekee web-tek\-no\-lo\-gi\-oi\-den käyttämisestä yhä houkuttelevampaa ja kustannustehokkaampaa myös toteutettaessa liiketoimintakriittisiä sovelluksia.
 
-Mobiililaitteiden määrän kasvuvauhti on ohittanut matkapuhelinverkkojen datayhteyksien kantokyvyn kasvuvauhdin. Laitteita myös käytetään yhä syrjäisemmissä sijainneissa, missä datayhteydet ovat rajallisia tai jopa olemattomia. Tämä aiheuttaa ongelmia käytettäessä web-sovelluksia, joiden toiminta on riippuvainen yhteydestä palvelimeen. Huono datayhteys tuottaa ongelmia web-sovelluksen käyttäjälle, kun sovellus saattaa olla hetkittäin täysin toimimattomassa tilassa.
+Mobiililaitteiden määrän kasvuvauhti on ohittanut matkapuhelinverkkojen datayhteyksien kan\-to\-ky\-vyn kasvuvauhdin. Laitteita myös käytetään yhä syrjäisemmissä sijainneissa, missä datayhteydet ovat rajallisia tai jopa olemattomia. Tämä aiheuttaa ongelmia käytettäessä web-sovelluksia, joiden toiminta on riippuvainen yhteydestä palvelimeen. Huono datayhteys tuottaa ongelmia web-sovelluksen käyttäjälle, kun sovellus saattaa olla hetkittäin täysin toimimattomassa tilassa.
 
-Tässä työssä keskitytään siihen, miten web-kehittäjät voivat varautua yhteyden katkoksiin ja heikkoon laatuun sovellustasolla. Työn pohjana käytetään tapaustutkimusta, missä päiväkotiympäristössä käytettävään Päikky-sovellukseen lisätään offline-tuki. Tapaustutkimuksessa toteutettuja ratkaisuja arvioidaan käyttäjähaastattelujen avulla sen kannalta, miten ne sopivat yleispäteviksi ratkaisumalleiksi web-sovelluksissa yhteyskatkosten varalle. Tehtyjä ratkaisuja arvioidaan myös käyttökokemusnäkökulmasta, ja siitä, miten ne tukevat ja ovat ymmärrettävissä keskivertokäyttäjälle.
+Tässä työssä keskitytään siihen, miten web-kehittäjät voivat varautua yhteyden katkoksiin ja heikkoon laatuun sovellustasolla. Työn pohjana käytetään tapaustutkimusta, missä päiväkotiympäristössä käytettävään Päikky-sovellukseen lisätään offline-tuki. Tapaustutkimuksessa toteutettuja ratkaisuja arvioidaan käyttäjähaastattelujen avulla sen kannalta, miten ne sopivat yleispäteviksi ratkaisumalleiksi web-sovelluksissa yhteyskatkosten varalle. Tehtyjä ratkaisuja arvioidaan myös käytettävyysnäkökulmasta, ja siitä, miten ne tukevat keskivertokäyttäjää ja ovat tälle ymmärrettävissä.
 
-Työn tulosten pohjalta esitetään suunnitteluperiaatteita sovelluskehittäjille yh\-te\-ys\-kat\-kok\-siin varautumista varten. Käyttäjähaastatteluissa ilmenneet epäkohdat ratkaisun käyttökokemuksesa listataan, ja niihin ehdotetaan mahdollisia parannusehdotuksia.
+Työn tulosten pohjalta esitetään suunnitteluperiaatteita sovelluskehittäjille yh\-te\-ys\-kat\-kok\-siin varautumista varten. Käyttäjähaastatteluissa ilmenneet epäkohdat ratkaisun käyttökokemuksesa listataan ja niihin ehdotetaan mahdollisia pa\-ran\-nus\-eh\-do\-tuk\-si\-a.
 
 Työn keskeisimmät tulokset osoittavat, että yhteysongelmiin tulee ainakin jollakin tasolla varautua nykypäivänä kaikissa liiketoimintakriittisissä web-sovelluksissa. Vaikka varsinaista offline-tukea ei toteutettaisikaan, voidaan työssä esitetyillä suunnitteluperiaatteilla parantaa huomattavasti web-sovelluksen käyttökokemusta.
 
@@ -69,21 +69,21 @@ Työn keskeisimmät tulokset osoittavat, että yhteysongelmiin tulee ainakin jol
 \textsf{Master's Degree Programme in Information Technology}\\
 {\bf \textsf{Miro Nieminen: Fallback Mechanisms for Connection Loss in Single-Page Web Applications}}\\
 \textsf{Master of Science Thesis, 53 pages}\\
-\textsf{March 2015}\\
+\textsf{May 2015}\\
 \textsf{Major: Software Engineering}\\
 \textsf{Examiner: Tommi Mikkonen}\\
 \textsf{Keywords: JavaScript, Web Application, Single-Page Application, Computer Supported Collaborative Work, Offline Support}\\
 \end{spacing}
  
-Fast-paced evolution of web technologies in both desktop and mobile devices has made browser environment reckoned platform for almost any kind of application. The fact that more and more people are carrying efficient browsers in their pockets makes usage of web technologies more tempting and cost efficient solution even when creating business critical applications.
+Fast-paced evolution of web technologies in both desktop and mobile devices has made browser environment a reckoned platform for almost any kind of application. The fact that more and more people are carrying efficient browsers in their pockets makes usage of web technologies more tempting and cost efficient solution even when creating business critical applications.
 
-The growth rate of mobile device usage has surpassed the rate in which new mobile network is built. The devices are also used in more distant locations, where the data connection of the mobile network can be very limited or almost non-existent. This causes problems when using web applications, which are dependent on the connection to the server. Bad connectivity results in a degenerate user experience, since the application might be completely unusable when the connection is dropped.
+The growth rate of mobile device usage has surpassed the rate in which new mobile network is built. The devices are also used in more distant locations where the data connection of the mobile network can be very limited or almost non-existent. This causes problems when using web applications, which are dependent on the connection to the server. Bad connectivity results in a degenerated user experience, since the application might be completely unusable when the connection is dropped.
 
-In this thesis we focus on how web developers could prepare the application for connection loss on the application level. The research is based on a case study, in which Päikky, an application from the kindergarten domain, is implemented with an offline support. The solutions done on the case study's offline support implementation are evaluated with user interviews from technical viewpoint and from user experience perspective. On the evaluation the emphasis is on could the solutions be generalized as design guidelines for offline support, and are the solutions understandable and usable for an average user.
+In this thesis we focus on how web developers could prepare the application for connection loss on the application level. The research is based on a case study, in which Päikky, an application from the kindergarten domain, is implemented with an offline support. The solutions done on the case study's offline support implementation are evaluated with user interviews from a technical viewpoint and from the user experience perspective. The emphasis on the evaluation is that could the solutions be generalized as a design guidelines for offline support, and are the solutions understandable and usable for an average user.
 
-Based on the results of the research a set of design guidelines for offline support implementation are defined. The user experience flaws found on the user interviews are listed, and possible solutions for them are discussed.
+Based on the results of the research a set of design guidelines for offline support implementation are defined. The user experience flaws found in the user interviews are listed, and possible solutions for them are discussed.
 
-The essential results of this thesis indicates that connection issues are something that application should be prepared for, at least if the application is business critical. Even if there is no need for a full offline support, following the guidelines introduced will improve any web application's user experience significantly.
+The essential results of this thesis indicate that connection issues are something that application should be prepared for, at least if the application is business critical. Even if there is no need for a full offline support, following the guidelines introduced will improve any web application's user experience significantly.
 
 
 
@@ -98,7 +98,7 @@ The essential results of this thesis indicates that connection issues are someth
 \noindent 
 
 
-Academic writing surely is not for everyone, I will tell you that. The booklet you are holding (or watching via screen) is the result of the mentally hardest project I have ever pulled through. Even if I never actually doubt myself about finishing this thesis, there were some dark moments during the creation of this ensemble. 
+Academic writing surely is not for everyone, I can tell you that. The booklet you are holding (or watching via screen) is the result of the mentally hardest project I have ever pulled through. Even if I never actually doubt myself about finishing this thesis, there were some dark moments during the creation of this ensemble. 
 
 This space is usually used for thanking relevant people. And by coincidence also I have several people to thank for making this thesis happen.
 
@@ -110,7 +110,7 @@ Massive thanks goes also to my employee Futurice, which supplied the extraordina
 
 Lastly I would like to send love to my home team J and D, who cheered me through this project and withstanded my constant tantrums during it.
 
-And now, as they say in Finland: \textit{``torille!''}
+And now, as they say in Finland: \textit{``Torille!''}
 
 %Your advertisement could have been here.
 
