Add references to multitenancy and HTML5 App Cache

--- a/thesis-mnie.bib
+++ b/thesis-mnie.bib
@@ -641,3 +641,31 @@ This dissertation defines a framework for understanding software architecture vi
 	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/DWU73K9W/deferred.promise()  jQuery API Documentation.html:text/html},
 	howpublished = {Available at: \url{http://api.jquery.com/deferred.promise/} Referenced 20.11.2014.}
 }
+
+@inproceedings{bezemer_multi-tenant_2010,
+	address = {New York, NY, USA},
+	series = {{IWPSE}-{EVOL} '10},
+	title = {Multi-tenant {SaaS} {Applications}: {Maintenance} {Dream} or {Nightmare}?},
+	isbn = {978-1-4503-0128-2},
+	shorttitle = {Multi-tenant {SaaS} {Applications}},
+	url = {http://doi.acm.org/10.1145/1862372.1862393},
+	doi = {10.1145/1862372.1862393},
+	abstract = {Multi-tenancy is a relatively new software architecture principle in the realm of the Software as a Service (SaaS) business model. It allows to make full use of the economy of scale, as multiple customers - "tenants" - share the same application and database instance. All the while, the tenants enjoy a highly configurable application, making it appear that the application is deployed on a dedicated server. The major benefits of multi-tenancy are increased utilization of hardware resources and improved ease of maintenance, in particular on the deployment side. These benefits should result in lower overall application costs, making the technology attractive for service providers targeting small and medium enterprises (SME). However, as this paper advocates, a wrong architectural choice might entail that multi-tenancy becomes a maintenance nightmare.},
+	urldate = {2015-04-19},
+	booktitle = {Proceedings of the {Joint} {ERCIM} {Workshop} on {Software} {Evolution} ({EVOL}) and {International} {Workshop} on {Principles} of {Software} {Evolution} ({IWPSE})},
+	publisher = {ACM},
+	author = {Bezemer, Cor-Paul and Zaidman, Andy},
+	year = {2010},
+	pages = {88--92},
+	file = {ACM Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/D558MNC9/Bezemer and Zaidman - 2010 - Multi-tenant SaaS Applications Maintenance Dream .pdf:application/pdf}
+}
+
+@article{wharry_html5_2014,
+	title = {{HTML}5 {Offline} {Technologies}},
+	url = {http://andreawharry.com/assets/img/portfolio/WharryAndreaFinalPaper.pdf},
+	urldate = {2015-04-19},
+	author = {Wharry, Andrea},
+	year = {2014},
+	file = {[PDF] osoitteesta andreawharry.com:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/NG86PEGU/Wharry - 2014 - HTML5 Offline Technologies.pdf:application/pdf}
+}
+
