Add reference to the internet users amount

--- a/thesis-mnie.bib
+++ b/thesis-mnie.bib
@@ -1,10 +1,10 @@
 
 @misc{statcounter_global_????,
-	title = {Internet Usage global stats},
+	title = {Internet Usage Global Stats},
 	url = {http://gs.statcounter.com/#all-comparison-ww-monthly-201311-201411},
 	urldate = {2014-12-04},
 	author = {StatCounter},
-	howpublished = {Available at: http://gs.statcounter.com/#all-comparison-ww-monthly-201311-201411/ Referenced 04.12.2014.}
+	howpublished = {Available at: \url{http://gs.statcounter.com/#all-comparison-ww-monthly-201311-201411/} Referenced 04.12.2014.}
 }
 
 @misc{jazayeri_trends_????,
@@ -667,5 +667,16 @@ This dissertation defines a framework for understanding software architecture vi
 	author = {Wharry, Andrea},
 	year = {2014},
 	file = {[PDF] osoitteesta andreawharry.com:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/NG86PEGU/Wharry - 2014 - HTML5 Offline Technologies.pdf:application/pdf}
+	howpublished = {Available at: \url{http://andreawharry.com/assets/img/portfolio/WharryAndreaFinalPaper.pdf} Referenced 19.4.2015.}
+}
+
+@misc{_number_????,
+	title = {Number of {Internet} {Users} (2015)},
+	url = {http://www.internetlivestats.com/internet-users/},
+	author = {Internet Live Stats},
+	abstract = {World Internet users by year and Internet users by Country. Live counter showing estimated current internet users and historical growth rate. Charts, infographics, and interesting info.},
+	urldate = {2015-04-19},
+	file = {Snapshot:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/NN9X2ECV/internet-users.html:text/html},
+	howpublished = {Available at: \url{http://www.internetlivestats.com/internet-users} Referenced 19.4.2015.}
 }
 
