Fix content errors/typos in .bib file

--- a/thesis-mnie.bib
+++ b/thesis-mnie.bib
@@ -7,13 +7,18 @@
 	howpublished = {Available at: \url{http://gs.statcounter.com/#all-comparison-ww-monthly-201311-201411/} Referenced 04.12.2014.}
 }
 
-@misc{jazayeri_trends_????,
-	title = {Some Trends in Web Application Development},
-	url = {http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=4221621&url=http%3A%2F%2Fieeexplore.ieee.org%2Fxpls%2Fabs_all.jsp%3Farnumber%3D4221621},
-	abstract = {http://ieeexplore.ieee.org/xpl/login.jsp?tp=\&arnumber=4221621\&url=http\%3A\%2F\%2Fieeexplore.ieee.org\%2Fxpls\%2Fabs\_all.jsp\%3Farnumber\%3D4221621},
-	author = {Jazayeri, M},
-	howpublished = {Available at: \url{http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=4221621&url=http%3A%2F%2Fieeexplore.ieee.org%2Fxpls%2Fabs_all.jsp%3Farnumber%3D4221621} Referenced 2.11.2014.}
 
+@inproceedings{jazayeri_trends_2007,
+	title = {Some {Trends} in {Web} {Application} {Development}},
+	doi = {10.1109/FOSE.2007.26},
+	abstract = {A Web application is an application that is invoked with a Web browser over the Internet. Ever since 1994 when the Internet became available to the public and especially in 1995 when the World Wide Web put a usable face on the Internet, the Internet has become a platform of choice for a large number of ever-more sophisticated and innovative Web applications. In just one decade, the Web has evolved from being a repository of pages used primarily for accessing static, mostly scientific, information to a powerful platform for application development and deployment. New Web technologies, languages, and methodologies make it possible to create dynamic applications that represent a new model of cooperation and collaboration among large numbers of users. Web application development has been quick to adopt software engineering techniques of component orientation and standard components. For example, search, syndication, and tagging have become standard components of a new generation of collaborative applications and processes. Future developments in Web applications will be driven by advances in browser technology, Web Internet infrastructure, protocol standards, software engineering methods, and application trends.},
+	booktitle = {Future of {Software} {Engineering}, 2007. {FOSE} '07},
+	author = {Jazayeri, M.},
+	month = may,
+	year = {2007},
+	keywords = {Access protocols, Application software, Collaboration, Informatics, Internet, Multimedia databases, online front-ends, Software engineering, Software standards, Standards development, Web application development, Web browser, Web Internet infrastructure, Web sites, World Wide Web},
+	pages = {199--213},
+	file = {IEEE Xplore Abstract Record:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/R5ZN7ZZR/abs_all.html:text/html;IEEE Xplore Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/JJ8BB4FF/Jazayeri - 2007 - Some Trends in Web Application Development.pdf:application/pdf}
 }
 
 @inproceedings{carstensen_computer_1999,
@@ -116,7 +121,7 @@ Research associates Kyle Nicholas and Lisa Parker were instrumental in undertaki
 @misc{fielding_et_al_hypertext_????,
 	title = {Hypertext Transfer Protocol 1.1 -- Header Field Definitions},
 	url = {http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.9},
-	author = {Fielding, et al},
+	author = {W3.org},
 	howpublished = {Available at: \url{http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.9} Referenced 4.11.2014.}
 }
 
@@ -666,7 +671,7 @@ This dissertation defines a framework for understanding software architecture vi
 	urldate = {2015-04-19},
 	author = {Wharry, Andrea},
 	year = {2014},
-	file = {[PDF] osoitteesta andreawharry.com:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/NG86PEGU/Wharry - 2014 - HTML5 Offline Technologies.pdf:application/pdf}
+	file = {[PDF] osoitteesta andreawharry.com:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/NG86PEGU/Wharry - 2014 - HTML5 Offline Technologies.pdf:application/pdf},
 	howpublished = {Available at: \url{http://andreawharry.com/assets/img/portfolio/WharryAndreaFinalPaper.pdf} Referenced 19.4.2015.}
 }
 
